...
            .listStyle(InsetGroupedListStyle())
            .navigationTitle("Filter")
            .navigationBarItems(trailing:
                Button {
                    self.presentationMode.wrappedValue.dismiss()
                } label: {
                    Text("Done")
                }
            )
        }
    }
}

...
